# esp32-auto-ota

./: CMakeLists.txt  Dockerfile  build.bat  clean.bat  docker-compose.yml  partitions.csv  sdkconfig.defaults  test-docker.bat  version.json
.github/workflows/: build.yml  ci-cd.yml
main/: CMakeLists.txt  idf_component.yml  main.c  ota_manager.c  ota_manager.h  wifi_config.h
scripts/: entrypoint.sh
